[package]
edition = "2021"
name = "ti_worker"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
reqwest = {version = "0.11", features = ["gzip"]}
ti_protocol = {path = "../ti_protocol"}
tokio = {version = "1", features = ["full"]}
serde = "1"
serde_derive = "1"
serde_json = {version = "1", default-features = false, features = ["alloc"]}
log = "0.4"
log4rs = "1"
